# SCGB

./: .diskspace  .diskspace1  .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
env/: scgb.yaml  scgb_plsmer.yaml
scgb/: core.py
scgb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scgb/.ipynb_checkpoints/: core-checkpoint.py
scgb/env/: scgb_comebin.yaml  scgb_genomad.yaml  scgb_sembin.yaml
scgb/modules/: Binning.py  FilterFalsePlasmid.py  record_code.txt
scgb/modules/.ipynb_checkpoints/: Link-checkpoint.py  PredictPlasmid-checkpoint.py  SummaryBc2Cbin-checkpoint.py  Untitled-checkpoint.ipynb  record_code-checkpoint.txt
